UPDATE: app/style.css

--- a/app/style.css
+++ b/app/style.css
@@ -1,82 +1,90 @@
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-*, *::before, *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
+html,
+body {
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
 }
 
 body {
-    padding: 0;
-    margin: 0;
-    position: absolute;
+	padding: 0;
+	margin: 0;
+	position: absolute;
 }
 
-body, input {
-    font: menu;
+body,
+input {
+	font: menu;
 }
 
-textarea, input, div, button {
-    outline: none;
-    margin: 0;
+textarea,
+input,
+div,
+button {
+	outline: none;
+	margin: 0;
 }
 
 /* Controls Section */
 .controls {
-    background-color: rgb(217, 241, 238);
-    padding: 10px;
+	background-color: #d9f1ee;
+	padding: 10px;
 }
 
 button {
-    font-size: 14px;
-    background-color: rgb(181, 220, 216);
-    border: none;
-    padding: .5em 1em;
+	font-size: 14px;
+	background-color: #b5dcd8;
+	border: none;
+	padding: 0.5em 1em;
 }
 
 button:hover {
-    background-color: rgb(156, 198, 192);
+	background-color: #9cc6c0;
 }
 
 button:active {
-    background-color: rgb(144, 182, 177);
+	background-color: #90b6b1;
 }
 
 button:disabled {
-    background-color: rgb(196, 204, 202);
+	background-color: #c4ccca;
 }
 
 /* Content Styling */
 .container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    min-width: 100vw;
-    position: relative;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	min-width: 100vw;
+	position: relative;
 }
 
 .content {
-    height: 100vh;
-    display: flex;
+	height: 100vh;
+	display: flex;
 }
 
-.raw-markdown, .rendered-html {
-    min-height: 100%;
-    max-width: 50%;
-    flex-grow: 1;
-    padding: 1em;
-    overflow: scroll;
-    font-size: 16px;
+.raw-markdown,
+.rendered-html {
+	min-height: 100%;
+	max-width: 50%;
+	flex-grow: 1;
+	padding: 1em;
+	overflow: scroll;
+	font-size: 16px;
 }
 
 .raw-markdown {
-    border: 5px solid rgb(238, 252, 250);
-    background-color: rgb(238, 252, 250);
-    font-family: monospace;
+	border: 5px solid #eefcfa;
+	background-color: #eefcfa;
+	font-family: monospace;
 }
